fixed modal alignment

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -4,8 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  padding-left: 19px;
-  padding-right: 19px;
+  padding: 0 19px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   display: none;
@@ -22,8 +21,8 @@
   margin: auto;
   padding: 36px;
   border-radius: 10px;
-  width: 430px;
-  height: 330px;
+  max-width: 430px;
+  max-height: 330px;
 }
 
 .modal__close {
@@ -45,8 +44,6 @@
 }
 
 .modal__heading {
-  width: 330px;
-  height: 23px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 24px;
   font-weight: 900;
@@ -67,8 +64,6 @@
 .modal__input {
   margin-bottom: 30px;
   height: 27.25px;
-  top: 306px;
-  left: 461px;
   border: none;
   border-bottom: 1px solid #000000;
 }
@@ -92,8 +87,9 @@
 
 @media screen and (max-width: 580px) {
   .modal__container {
-    width: 282px;
-    height: 322px;
+    max-width: 282px;
+    max-height: 322px;
+    padding: 20px;
   }
   .modal__close {
     right: 0;
